<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SnoreDiaby</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="maohao">:</string>
    <string name="dot">…</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>
    <string name="sleep_on">Sleep ON</string>
    <string name="sleep_off">Sleep OFF</string>
    <string name="start_sleep">Start Sleep</string>
    <string name="wake_me_up_at">Wake me up at&#160;:&#160;</string>
    <string name="snore">Snore</string>
    <string name="_10">Light recording frequency (sec(s)/th)&#160;&#160;&#160;Default 30 secs
        (s)</string>
    <string name="_60_db">Fill in the decibel&#160;&#160;&#160;Default 50 (dB)</string>
    <string name="light_alert_default_5_lx">Light alert&#160;&#160;&#160;Default 5 (lx)</string>
    <string name="lx">(lx)</string>
    <string name="s">(s)</string>
    <string name="db">(dB)</string>
    <string name="light_display">Light Display</string>
    <string name="normal">Normal</string>
    <string name="random">Random</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="night">Night</string>
    <string name="nap">Nap</string>
    <string name="snoring_vibration">Snore Tremor</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="move">Move</string>
    <string name="th">(th)</string>
    <string name="sec_s">Sec(s)</string>
    <string name="list_fragment">
        There are two ways to operate your records&#160;:&#160;\n
        &#160;1. Click on the date to view individual record.\n
        &#160;2. Long press the date to delete individual record.</string>
    <string name="date">Date</string>
    <string name="snore_per">Snore %</string>
    <string name="light_per">Light %</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="traditional_chinese">Traditional Chinese</string>
    <string name="simplified_chinese">Simplified Chinese</string>
    <string name="warning_the_system_will">
        Warning!\nSystem will shut down if you change language during the sleep tracking!\nStill
        want to switch the language?
    </string>
    <string name="send_us_a_feedback">Send us a feedback</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="evaluation">Evaluation</string>
    <string name="bmi">BMI</string>
    <string name="revise">revise</string>
    <string name="_null">Null</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="textview">TextView</string>
    <string name="personal_info">Personal Information</string>
    <string name="warning">Warning!</string>
    <string name="delete_rec">Do you want to delete all records?</string>
    <string name="delete_individual">Delete this record?</string>
    <string name="data_gone">All data have gone</string>
    <string name="yes_">Yes</string>
    <string name="no_">No</string>
    <string name="language_">Language</string>
    <string name="enter_subject">You must enter the subject</string>
    <string name="enter_messeage">You must enter a message</string>
    <string name="example_added">Data added</string>
    <string name="feedback">Feedback</string>
    <string name="click_here_tracking">Click here to start tracking</string>
    <string name="click_the_alarm">Click the time to set alarm</string>
    <string name="count_start">Start Counting&#160;</string>
    <string name="count_finish">Your Sleep Length&#160;</string>
    <string name="osa">OSA</string>
    <string name="stop_snore">Stop Snore</string>
    <string name="sleep_ana">Sleep Analysis Score:</string>
    <string name="sleep_sug">Sleep Advice:</string>
    <string name="snore_permao">Snore %:</string>
    <string name="light_permao">Light %:</string>
    <string name="hours_of_sleep">Hours of sleep&#160;:&#160;</string>
    <string name="time_to_bed">Time to bed&#160;:&#160;</string>
    <string name="suggestion_mao">Suggestion:</string>
    <string name="sug_breath_times">(The number of breaths in an hour is about 960 times)</string>
    <string name="light_trend">Light Trend:</string>
    <string name="snoring_interval">Snoring Interval:</string>
    <string name="hr_s">hr(s)</string>
    <string name="not_calculated_after_5_am">(Not calculated after 5 am)</string>
    <string name="diary">Diary:</string>
    <string name="write_your_diary_here">write your diary here…</string>
    <string name="add_diary">Add Diary</string>
    <string name="save">Save</string>
    <string name="snoring_mao">Snore&#160;:&#160;</string>
    <string name="start_track">Start Tracking</string>
    <string name="sleep_rec">Sleep Records</string>
    <string name="advance_opt">Advance Options</string>
    <string name="instruc">Instructions</string>
    <string name="osa_times">OSA&#160;:&#160;</string>
    <string name="dia_null">Null</string>
    <string name="bar_serious">Serious</string>
    <string name="bar_medium">OSA</string>
    <string name="bar_slight">Maybe OSA</string>
    <string name="bar_thr">Times (/Hour)</string>
    <string name="obstructive_sleep_apnea">Obstructive Sleep Apnea:</string>
    <string name="lux">Lux</string>
    <string name="limit_lux">Limit (5 lux)</string>
    <string name="file_fail">Failed to create file</string>
    <string name="no_microphone">No microphone permissions</string>
    <string name="snore_none">
        None: The number of snoring per hour is less than 10% of the maximum number of possible beeps, and the number of
        snoring per hour is less than 96 times.
    </string>
    <string formatted="false" name="snore_slight">
        Slight: The number of snoring per hour is between 10% to 20% of the maximum number of possible beeps, and the snoring
        per hour is between 96 and 288 times. It may be due to excessive fatigue. After asleep, you will unconsciously use
        more oxygen in your mouth to eliminate fatigue. This can cause soft tissue such as soft palate to exacerbate vibration.
    </string>
    <string formatted="false" name="snore_medium">
        Medium: The number of snoring per hour is between 20% to 40% of the maximum possible number, and the number of snoring
        per hour is between 288 and 480 times. Please observe for a few more days to see if you will have sleepiness during
        the day and lack of concentration.
    </string>
    <string name="snore_serious">
        Serious: The number of snoring per hour is higher than 40% of the maximum number of possible beeps, and the snoring
        is more than 480 times per hour.This ratio is a bit too much, so the body is prone to insulin resistance.
    </string>
    <string name="osa_unlike">Unlike: Within 5 times per hour and 30 times throughout the night.</string>
    <string name="osa_maybe">Maybe: 5 to 10 times per hour or 30 to 50 times per night.</string>
    <string name="osa_yes">Yes: More than 10 times per hour and more than 50 times all night.</string>
    <string name="osa_bug">You have got a bug!!!</string>
    <string name="lux_yes">
        Exposing to light when sleeping can inhibit the secretion of sleep hormones (melatonin)
        and make the body difficult to keep fit.
    </string>
    <string name="lux_no">
        The system did not detect any light at night.Your sleeping environment is good.
    </string>
    <string name="lux_up">
        In addition, did you get up too many times at night? This might directly affect your sleep quality.
    </string>
    <string name="example_sug">
        You get up at the appointed time and hope you keep it. Also, a short sleep can cause a decrease in insulin
        sensitivity, which can disrupt your ability to regulate blood sugar metabolism. In addition, if you sleep too
        late, you will miss the sleep period.
    </string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>
    <string name="permission_not">No permission obtained</string>
    <string name="sreen_unlock">Screen unlock</string>
    <string name="sleep_nine">
        Your sleep duration is too long! Is it possible that you had a poor sleep quality
        last night which caused you sleep too long?
    </string>
    <string name="sleep_good">Your sleeping time is very healthy!</string>
    <string name="sleep_short">
        Your sleep is too short, which can lead to decreased insulin sensitivity, which can
        disturb the regulation of blood sugar metabolism and make it more hard to prevent Type 2
        Diabetes.
    </string>
    <string name="sleep_bug_first">You caught the loophole!!!!</string>
    <string name="sleep_21">In addition, you are very healthy and have gone to bed so early.</string>
    <string name="slee_23">In addition, if you sleep too late, you will miss the shallow sleep period.</string>
    <string name="sleep_0">In addition, going to bed after 12am will miss the exuberant period of the liver to eliminate toxins.</string>
    <string name="sleep_3">In addition, this period of time is the most vulnerable moment of the human body.
        Do not go to bed until this time.</string>
    <string name="sleep_6">In addition, you have been reversed day and night, please adjust your schedule!</string>
    <string name="sleep_11">In addition, taking a nap at noon is a good choice.</string>
    <string name="sleep_15">In addition, you might lose sleep if you sleep at this time.</string>
    <string name="sleep_bug_2">In addition, you caught a bug!!!!</string>
    <string name="back_keyDown">
        The back button is unavailable.
        \nPlease use the icon in the upper left.
    </string>
    <string name="double_click_exit">Click again to exit</string>
    <string name="example_ad">Example</string>
    <string name="get_permission">Permissions granted</string>
    <string-array name="advance">
        <item>Personal Information</item>
        <item>Delete All Records</item>
        <item>Language</item>
        <item>Example</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="instructions_main">
        
        <item>Instructions</item>
        <item>About Type 2 Diabetes</item>
        <item>About Sleep &amp; Type 2 Diabetes</item>
        <item>About Light &amp; Type 2 Diabetes</item>
        <item>FAQs</item>
    </string-array>
    <string-array name="instructions">
        <item>SnoreDiaby</item>
        <item>Placement</item>
        <item>Results</item>
        <item>Important Disclaimer</item>
    </string-array>
    <string-array name="introduction_cont">
        <item>
            SnoreDiaby is an app that records, measures and tracks your snoring.
            It helps thousands of people just like you to gain insights into their snoring.
            \n\nYou can share SnoreDiaby&#8217;s reports with your doctor or dentist,
            or experiment with snoring remedies and lifestyle changes and track their impact over time.
        </item>
    </string-array>
</resources>