<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="com.bristol.snorediaby.activities.language.LanguageActivity"
    >

    <Button
        android:id="@+id/btn_confir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:text="@string/confirm"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lan_group"
        />

    <RadioGroup
        android:id="@+id/lan_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_confir"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/lan_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/english"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/lan_traditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/traditional_chinese"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/lan_simplified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/simplified_chinese"
            android:textColor="@color/white"
            android:visibility="gone"
            />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>